ROS_PC/log/build_2023-09-02_11-30-45/robot_controller/stderr.log
  File "/home/lingc/ECE4191G11/ROS_PC/install/robot_controller/lib/python3.10/site-packages/robot_controller/path_planner.py", line 197
    if self.plotting
                    ^
SyntaxError: expected ':'

